--- a/apps/main/project.json
+++ b/apps/main/project.json
@@ -1,7 +1,7 @@
 {
   "projectType": "application",
   "sourceRoot": "apps/main/src",
-  "prefix": "pomodoro-app",
+  "prefix": "app",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
