--- a/libs/shared/.eslintrc.json
+++ b/libs/shared/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "app",
+            "prefix": "pomodoroApp",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "app",
+            "prefix": "pomodoro-app",
             "style": "kebab-case"
           }
         ]
