--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nrwl/eslint-plugin-nx": "14.3.6",
     "@nrwl/jest": "14.3.6",
     "@nrwl/linter": "14.3.6",
+    "@nrwl/node": "^14.3.6",
     "@nrwl/workspace": "14.3.6",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
@@ -52,6 +53,8 @@
     "@angular/platform-browser": "~14.0.0",
     "@angular/platform-browser-dynamic": "~14.0.0",
     "@angular/router": "~14.0.0",
+    "firebase-admin": "^11.0.0",
+    "firebase-functions": "^3.21.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
