--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nrwl/linter": "14.3.6",
     "@nrwl/node": "^14.3.6",
     "@nrwl/workspace": "14.3.6",
+    "@tauri-apps/cli": "^1.0.2",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.24.0",
@@ -54,6 +55,7 @@
     "@angular/platform-browser": "~14.0.0",
     "@angular/platform-browser-dynamic": "~14.0.0",
     "@angular/router": "~14.0.0",
+    "@tauri-apps/api": "^1.0.1",
     "firebase-admin": "^11.0.0",
     "firebase-functions": "^3.21.2",
     "rxjs": "~7.4.0",
